charon/tests/ui/issue-369-mismatched-genericparams.rs
//@ known-failure

fn maybe() -> Option<usize> {
    Some(42)
}

fn pop() -> Option<()> {
    let _ = maybe()?;
    Some(())
}
